- Profile request also using queue. - Show error. - Clear state on button press. - Regex global flag removed.

--- a/public/css/hehe.css
+++ b/public/css/hehe.css
@@ -4,6 +4,20 @@
     margin-right: auto;
 }
 
+#error {
+    color: red;
+}
+
+ul {
+    margin: 0;
+}
+
+.block-info {
+    position: fixed;
+    right: 10px;
+    width: 300px;
+}
+
 #user_url {
     width: 300px;
 }
