--- a/public/css/hehe.css
+++ b/public/css/hehe.css
@@ -13,7 +13,9 @@ div {
     overflow: visible;
 }
 
-
+.input-container {
+    margin-bottom: 10px;
+}
 
 @media screen and (max-width: 550px) {
     .block-dislikers .title,
