added: metrica, error block; fixed css

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -103,8 +103,9 @@ color: var(--black-color) ;
 }
 
 #error{
-    color:red;
-    text-align: center;
+    color: red;
+    margin: 10px 0px;
+    font-size: 22px;
 }
 
 #cards{
