--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,7 +1,7 @@
 @import url("normalize.css");
 
 * {
-    --main-fg-color: #1b2a8b;
+    --main-fg-color: #c8190b;
     --main-bg-color: #FFFFFF;
     --black-color: #28262C;
     --positive-color: #24ce65;
@@ -42,9 +42,8 @@ header {
 #logo {
     color: var(--main-bg-color);
     font-weight: bold;
-    font-size: 40px;
+    font-size: 36px;
     padding: 0 20px;
-    text-shadow: var(--black-color) 2px 2px;
 }
 
 #search {
@@ -58,7 +57,6 @@ header {
 
 #search-label {
     color: var(--main-bg-color);
-    text-shadow: var(--black-color) 2px 2px;
     font-size: 22px
 }
 
@@ -315,7 +313,7 @@ header {
 
     #logo {
         order: 1;
-        font-size: 44px;
+        font-size: 36px;
     }
 
     #search {
